package solidexercicio10.model;

public class Astronauta extends Passageiro{
     public Astronauta(String nome, int x, int y) {
       super(nome, x, y);
    }

    @Override
    public int getPontuacao() {
        return 20;
    }

    @Override
    public String getTipo() {
        return "Astronauta";
    }
}
